--- a/Areas/Admin/Views/HomeAdmin/Manage_Teacher.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Teacher.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Manage_Teacher";
+    ViewBag.Title = "Quản lý giáo viên";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml";
-    ViewBag.Active = "manage";
 }
 
 <h2>Manage_Teacher</h2>
