--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,17 +8,50 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/bootstrap")
+    @Styles.Render("~/Views/Home/style/css")
+    
     <!-- Thư viện JavaScript của Bootstrap 5 (bao gồm Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<style>
+    #box_top_head {
+        height: 35px;
+        width: 1200px;
+        margin: 0 65px 0 65px;
+        padding: 0 15px 0 15px;
+    }
+    #bar_header{
+        position:relative;
+        margin:0 0 0 0;
+        padding:0 0 0 0;
+        display:flex;
+        list-style-type:disc;
+        list-style-position:outside;
+        align-content:end;
+        text-align:right;
+    }
 
+</style>
 
 </head>
-<body class="">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-black  fixed-top ">
+
+<body style="height:1500px;">
+    <div class=" container  " id="box_top_head"  >
+               <ul class="container"id=" bar_header" >
+                   abc
+
+               </ul>
+    </div>
+
+
+
+
+
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-black  sticky-top "  >
         <div class="container-fluid">
-            <div class="navbar-header ">
+            <div class="navbar-header "style="height:60px;">
                 <a class="navbar-brand" href="">
                     <img src="~/source/logo.jpg" alt="Avatar Logo" style="width:50px;" class="rounded-pill" />
                     @Html.ActionLink("Phố Thị Music", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
@@ -91,6 +124,9 @@
         </div>
 
     </nav>
+
+
+
     <div class=" body-content justify-content-center " style="margin-top:80px">
         @RenderBody()
     </div>
@@ -98,6 +134,10 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <hr />
+
+
+
+
     <footer class="site-footer">
         <div class="container">
             <div class="row">
