--- a/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Quản lý học viên";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml";
-
+    web2.Models.quanLyTrungTamDayDanEntities db = new web2.Models.quanLyTrungTamDayDanEntities();
 
 }
 
@@ -14,23 +14,23 @@
         <div class="col-sm-12 col-md-6 col-xl-6 ">
             <p>Chọn lớp:</p>
             <select class="form-select mt-3" id="selhv" name="sellisthv">
-                <option>Lop 1</option>
-                <option>Lop 2</option>
-                <option>Lop 3</option>
-                <option>Lop 4</option>
+                @foreach (var lop in db.LopHocs.ToList())
+                {
+                    <option value="@lop.Ma_lop">@lop.Ten_lop_hoc</option>
+                }
             </select>
         </div>
         <div class="col-sm-12 col-md-6 col-xl-6">
             <p>Nhập mã học viên:</p>
-            <form class="input-group" method="get" onsubmit="updateLink()">
+            <form class="input-group" method="post" action="@Url.Action("Find_Student", "HomeAdmin", new { area = "Admin" })">
                 <span class="input-group-text">Mã học viên</span>
-                <input type="text" class="form-control" id="maHocVienInput" placeholder="ex: hv01,..">
-                <a id="findLink" class="btn btn-success">Tìm</a>
+                <input type="text" class="form-control" name="maHocVienInput" placeholder="ex: hv01,..">
+                <button type="submit" class="btn btn-success">Tìm</button>
             </form>
         </div>
     </div>
     <div class="row d-grid gap-2 mt-4 mb-3">
-        <a >@Html.ActionLink("Thêm học viên mới","Add_Student","HomeAdmin", new {area = "Admin" }, new {@class= "btn btn-success" })</a>
+        <a>@Html.ActionLink("Thêm học viên mới", "Add_Student", "HomeAdmin", new { area = "Admin" }, new { @class = "btn btn-success" })</a>
     </div>
     <hr />
     <div class="row">
@@ -79,14 +79,17 @@
                         {
                             <td>Đã đóng học phí</td>
                         }
-                        else {  <td class="text-danger">Chưa đóng học phí</td>}
-                    <td colspan="2" style="display:inline-flex">
-                        <a>@Html.ActionLink("Sửa", "Edit_Student_Infor", "HomeAdmin", new { area = "Admin", maHocVien = item.Ma_hoc_vien }, new { @class = "btn btn-primary" })</a> 
-                        <form id="form-delete-@item.Ma_hoc_vien" action="@Url.Action("Delete_Student_Infor", "HomeAdmin", new { area = "Admin" })" method="post">
-                            <input type="hidden" name="maHocVien" value="@item.Ma_hoc_vien" />
-                            <button type="submit" class="btn btn-danger">Xoá</button>
-                        </form>
-                    </td>
+                        else
+                        {
+                            <td class="text-danger">Chưa đóng học phí</td>
+}
+                        <td colspan="2" style="display:inline-flex">
+                            <a>@Html.ActionLink("Sửa", "Edit_Student_Infor", "HomeAdmin", new { area = "Admin", maHocVien = item.Ma_hoc_vien }, new { @class = "btn btn-primary" })</a>
+                            <form id="form-delete-@item.Ma_hoc_vien" action="@Url.Action("Delete_Student_Infor", "HomeAdmin", new { area = "Admin" })" method="post">
+                                <input type="hidden" name="maHocVien" value="@item.Ma_hoc_vien" />
+                                <button type="submit" class="btn btn-danger">Xoá</button>
+                            </form>
+                        </td>
                     </tr>
                 }
 
@@ -94,12 +97,4 @@
         </table>
     </div>
 </div>
-<script>
-    function updateLink() {
-        var maHocVien = document.getElementById("maHocVienInput").value;
-        var url = '@Url.Action("Find_Student", "HomeAdmin", new { area = "Admin", maHocVien = "__maHocVien__" })';
-        url = url.replace("__maHocVien__", maHocVien);
-        document.getElementById("findLink").href = url;
-        return false;
-    }
-</script>
+
