--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-black  sticky-top "  >
-        <div class="container-fluid">
+        <div class="container">
             <div class="navbar-header "style="height:60px;">
                 <a class="navbar-brand" href="">
                     <img src="~/source/logo.jpg" alt="Avatar Logo" style="width:50px;" class="rounded-pill" />
